fixed nav bar on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ nav ul a:hover::after{
 
 
 nav .icon {
+	width: 5px;
   display: none;
 }
 
@@ -105,16 +106,23 @@ nav .icon {
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 700px) {
-  nav.responsive {position: relative;}
+  nav.responsive {position: absolute;}
   nav.responsive a.icon {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 17px;
+    top: -20px;
   }
-  nav.responsive a {
+  nav.responsive a:not(first-child) {
     float: none;
     display: block;
-    text-align: left;
+    text-align: right;
+    margin-top: 20px;
+  }
+
+  nav.responsive ul {
+  	margin-top: 30px;
+  	margin-right: -15px;
+  	text-align: right;
   }
 }
 
